Removed pointers and made lines thinner

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -38,7 +38,13 @@
 }
 
 .container {
-  margin-top: 0px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.canvas {
+  width: 100%
 }
 
 footer .container {
