--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -41,6 +41,9 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  flex-flow: column;
+  gap: 50px;
+  margin-bottom: 100px;
 }
 
 footer .container {
