--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -48,7 +48,7 @@ footer .container {
 }
 
 footer {
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   padding-top: 10px;
   width: 100%;
@@ -58,6 +58,7 @@ footer {
   text-align: center;
   background-color: #333;
   color: #fff;
+  display: block;
 }
 
 #nav {
