--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,7 +51,7 @@ footer .container {
 }
 
 footer {
-  /* position: fixed; */
+  position: fixed;
   bottom: 0;
   padding-top: 10px;
   width: 100%;
